fix custom css for contrast errors wave tool

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,13 +4,13 @@
     background-color: #fff;
     border: 2px solid #00a7b5;
     outline: 1;
-    box-shadow: none;
+    box-shadow: ;
 
 }
 
 .btnform {
     background: #101820;
-    border: #101820;
+    border: #00a7b5;
 }
 
 .btnform:hover {
@@ -18,14 +18,3 @@
     border: #101820;
 }
 
-.limit-size {
-    max-width: 10px;
-}
-
-@media (max-width: 500px) {
-
-    #username,
-    #password {
-        width: 80%;
-    }
-}
